# python-oa3

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: clojure-comparison.md
resources/: ORIGIN.md  openadr3.yaml
src/openadr3/: __init__.py  api.py  auth.py  enums.py  time.py
src/openadr3/entities/: __init__.py  models.py  payloads.py  raw.py
tests/: test_api.py  test_entities.py  test_time.py
